# demon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/demon-bin/: Cargo.toml
crates/demon-bin/src/: config.rs  main.rs
crates/demon-clients/: Cargo.toml
crates/demon-clients/src/: identity.rs  lib.rs  opensearch.rs  prometheus.rs  vault.rs
crates/demon-collect/: Cargo.toml
crates/demon-collect/src/: lib.rs
crates/demon-core/: Cargo.toml
crates/demon-core/src/: action.rs  audit.rs  audit_event.rs  auth.rs  authorize.rs  bottleneck.rs  contracts.rs  health.rs  inventory.rs  lib.rs  mutation.rs  reconcile.rs  residency.rs  runbook.rs
crates/demon-sdk/: Cargo.toml
crates/demon-sdk/src/: lib.rs
crates/demon-server/: Cargo.toml
crates/demon-server/src/: auth.rs  jobs.rs  lib.rs  runbooks.rs  session.rs  tls.rs  webauthn.rs
crates/demon-store/: Cargo.toml
crates/demon-store/migrations/: 0001_init.sql
crates/demon-store/src/: inventory.rs  lib.rs
crates/demon-tui/: Cargo.toml
crates/demon-tui/src/: lib.rs  main.rs
crates/demon-workers/: Cargo.toml
crates/demon-workers/src/: exec.rs  lib.rs
docs/: 00-README.md  01-core-architecture.md  02-provisioning-scaling-ops.md  03-security-architecture.md  04-collaboration-protocol.md  BUILD-PROMPT.md
docs/design/: README.md  traffic-inspect-traps-ratelimit.md  ui-redesign-brief.md
docs/design/v0.5/: CONTRAST-VERIFIED.md  README.md
docs/design/v0.5/chats/: chat1.md
docs/design/v0.5/project/: app.jsx  components.jsx  data.js  index.html  logo.html  redesign-rationale.md  shell.jsx  styles.css  surface-cmdk.jsx  surface-host-detail.jsx  surface-hosts.jsx  surface-wizard.jsx  tokens.md
docs/design/web-assets/: index.css  tailwind.config.ts
docs/planning/: 00-MASTER-PLAN.md  01-tui-reuse-map.md  02-auth-secrets-contracts.md  03-ui-design-system.md  04-vault-objections.md  05-vault-agent-prompt.md  06-phase4-kickoff.md
node-compile-cache/v22.12.0-arm64-9e3ad1fa-501/: 008336ae  01a7cc88  02308f27  027840f9  02f95bbf  0376eb4b  03943455  040f8dc7  05611e19  061d44ae  063058b6  07019ee1  0724390a  07377d05  08894c10  08b89606  0913eb1b  0b1151f7  0b5352c8  0b754ae2  0ca11fb7  0cc70ab0  0dc64759  0dfc628d  0e61ce97  0e7df8ca  0e83e31c  0fc7cae7  105d92d5  106a651d  108a6bf0  111f29ad  1288bf31  12a0e0d4  12dff7e3  137492a4  13a4f384  13ad9811  1427d022  1462341c  (+471 more)
node-jiti/: web-tailwind.config.ts.11aa42f9.js
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AppShell.tsx  HealthBadge.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  spinner.tsx  table.tsx
web/src/lib/: api.ts  health.ts  jobstate.ts  utils.ts  webauthn.ts
web/src/pages/: AuditPage.tsx  FleetOverview.tsx  HostDetailPage.tsx  JobsPage.tsx  RunbooksPage.tsx  TenantsPage.tsx
web/src/styles/: tokens.css
