[package]
name = "demon-clients"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Typed API clients for kalista / vulture / identity / vault (adapted from proximiio-tui)."

[dependencies]
demon-core = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
base64 = "0.22"
rand = "0.8"

[lints]
workspace = true
