[package]
name = "demon-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Single typed client/source for the demon API; web UI consumes OpenAPI-generated types."

[dependencies]
demon-core = { workspace = true }

[lints]
workspace = true
