[package]
name = "demon-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Single typed client/source for the demon API; web UI consumes OpenAPI-generated types."

[dependencies]
demon-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
