[package]
name = "demon-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Axum REST + WebSocket surface for proximiio.demon."

[dependencies]
demon-core = { workspace = true }
demon-store = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
