[package]
name = "demon-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Axum REST + WebSocket surface for proximiio.demon."

[dependencies]
demon-core = { workspace = true }
demon-store = { workspace = true }
demon-clients = { workspace = true }
demon-collect = { workspace = true }
demon-workers = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { version = "0.3", features = ["formatting"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
webauthn-rs = "0.5"
uuid = { version = "1", features = ["v4", "v5"] }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
