[package]
name = "demon-workers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Supervised tokio pollers / schedulers / analyzer / reconciler (Phase 1+)."

[dependencies]
demon-core = { workspace = true }
demon-store = { workspace = true }
demon-collect = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
